--- a/build.gradle
+++ b/build.gradle
@@ -29,13 +29,16 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
-	
-	implementation group: 'org.modelmapper'     , name: 'modelmapper'         , version: '2.3.8'
-	implementation group: 'net.rakugakibox.util', name: 'yaml-resource-bundle', version: '1.1'
-	
-	implementation group: 'io.jsonwebtoken'     , name: 'jjwt-api'            , version: '0.11.5'
-	implementation group: 'io.jsonwebtoken'     , name: 'jjwt-impl'           , version: '0.11.5'
-	implementation group: 'io.jsonwebtoken'     , name: 'jjwt-jackson'        , version: '0.11.5'
+
+	implementation group: 'org.modelmapper'         , name: 'modelmapper'              , version: '2.3.8'
+	implementation group: 'net.rakugakibox.util'    , name: 'yaml-resource-bundle'     , version: '1.1'
+
+	implementation group: 'io.jsonwebtoken'         , name: 'jjwt-api'                 , version: '0.11.5'
+	implementation group: 'io.jsonwebtoken'         , name: 'jjwt-impl'                , version: '0.11.5'
+	implementation group: 'io.jsonwebtoken'         , name: 'jjwt-jackson'             , version: '0.11.5'
+
+	implementation group: 'com.github.gavlyukovskiy', name: 'p6spy-spring-boot-starter', version: '1.8.0'
+
 	testImplementation 'org.projectlombok:lombok:1.18.28'
 
 	compileOnly 'org.projectlombok:lombok'
